<resources>
    <string name="app_name">Module2</string>

    <string name="username">Logged in: JDOE</string>

    //Page Names
    <string name="customer_title">Customers</string>
    <string name="sessions_title">Upcoming Sessions</string>
    <string name="home_title">Home</string>

    //Button Names
    <string name="logout_button_text">Logout</string>
    <string name="exit_button_text">Exit</string>
    <string name="customers_button_text">Customers</string>
    <string name="sessions_button_text">Sessions</string>


    //Menu Strings
    <string name="home_option">Home</string>
    <string name="customers_option">Customers</string>
    <string name="create_customer">Create Customer</string>
    <string name="create_session">Create Session</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="title_activity_customers">Customers</string>
    <string name="title_activity_create_user">Sign in</string>
    <string name="logout_option">Logout</string>
    <string name="logout_dialog">Logging you out</string>
    <string name="logout_positive_button">Continue</string>
    <string name="logout_negative_button">Cancel</string>

    //Create Customer Titles
    <string name="billingInformationTitle">Billing Info</string>
    <string name="customerInfoTitle">Basic Info</string>
    <string name="customerCreatedString">Customer Created!</string>

    //Create Customer Hints
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="streetAddressHint">Street Address</string>
    <string name="aptNumberHint">Street Address Line 2</string>
    <string name="cityHint">City</string>
    <string name="stateHint">State</string>
    <string name="zipHint">Postal Code</string>
    <string name="creditCardNumberHint">Credit Card Number</string>
    <string name="creditCardExpirationHint">Expiration Date</string>
    <string name="securityCodeHint">Security Code</string>
    <string name="create_customer_button">Create Customer</string>

    //Create Session Strings
    <string name="create_session_title">Session Details</string>
    <string name="customer_first_name_hint">Customer First Name</string>
    <string name="customer_last_name_hint">Customer Last Name</string>
    <string name="session_create_date">Date</string>
    <string name="session_create_time">Time</string>
    <string name="session_create_details">Details</string>
    <string name="create_session_button">Create Session</string>
    <string name="title_activity_session_view">SessionView</string>
    <string name="title_activity_customer_view">CustomerView</string>

    //Customer view strings
    <string name="customer_view_name">First Name Last Name</string>
    <string name="customer_view_number">(727) 867-5309</string>
    <string name="customer_view_email">Myemail@gmail.com</string>

    //Session view strings
    <string name="session_view_title">Session</string>
    <string name="session_view_customer_name">Customer Name</string>
    <string name="session_view_date">12/24/2012</string>
    <string name="session_view_time">12:24pm</string>
    <string name="session_view_details">These are the details of the session
    they are very basic </string>
    <string name="session_view_mark_complete">Session Complete</string>
    <string name="session_view_process">Process Billing</string>
    <string name="session_view_signature">Customer Signature</string>
    <string name="session_view_receipt">Generate Receipt</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
