<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <fragment
            android:id="@+id/user_fragment"
            android:name="com.bignerdranch.android.module2.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/customerInfoTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/customerInfoTitle"
            android:textAlignment="center" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone" />

        <TextView
            android:id="@+id/billingInfoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/billingInformationTitle"
            android:textAlignment="center" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/streetAddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/streetAddressHint"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/addressAPTInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/aptNumberHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cityHint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/stateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stateHint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/zipInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/zipHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/creditCardNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/creditCardNumberHint"
            android:inputType="number" />

        <EditText
            android:id="@+id/creditCardExpirationHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/creditCardExpirationHint"
            android:inputType="date" />

        <EditText
            android:id="@+id/securityCodeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/securityCodeHint"
            android:inputType="number" />

        <Button
            android:id="@+id/create_customer_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@android:color/holo_green_dark"
            android:text="@string/create_customer_button" />

    </LinearLayout>
</ScrollView>