<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:isScrollContainer="true"
    android:orientation="vertical">

    <fragment
        android:id="@+id/user_fragment"
        android:name="com.bignerdranch.android.module2.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/createSessionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/create_session_title"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/session_create_customer_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/customer_first_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/session_create_customer_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/customer_last_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/session_create_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/session_create_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/session_create_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/session_create_time"
        android:inputType="time" />

    <EditText
        android:id="@+id/session_create_details"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:ems="10"
        android:hint="@string/session_create_details"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/holo_green_dark"
        android:padding="50dp"
        android:text="@string/create_session"
        android:textAlignment="center" />

</LinearLayout>