<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:name="com.bignerdranch.android.module2.Toolbar"
        android:id="@+id/user_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/customers_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/customers_button_text" />

    <Button
        android:id="@+id/sessions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/sessions_button_text" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/logout_button_text" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/exit_button_text" />

</LinearLayout>