<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:name="com.bignerdranch.android.module2.Toolbar"
        android:id="@+id/user_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/user_picture_image_view"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_view_name"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_number_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_view_number"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/user_email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_view_email"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/user_session_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>